--- a/project.ipynb
+++ b/project.ipynb
@@ -17,7 +17,8 @@
         "Members:\n",
         "1. Pawan Bhandari - 45\n",
         "2. Nishrit Baral - 42\n",
-        "3. Pranjal Bhatt - 48\n"
+        "3. Bikalpa Dhungana - 22\n"
+        "4. Pranjal Bhatt - 48\n"
       ]
     },
     {
